--- a/MHG.WPF.Style/App.xaml
+++ b/MHG.WPF.Style/App.xaml
@@ -4,6 +4,18 @@
              xmlns:local="clr-namespace:MHG.WPF.Style"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+         <!--<Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="Width" Value="100" />
+            <Setter Property="Margin" Value="10" />
+        </Style>-->
+        <Style x:Key="BaseStyle" TargetType="Button">
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="Width" Value="100" />
+        </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button" BasedOn="{StaticResource BaseStyle}">
+            <Setter Property="FontWeight" Value="Bold" />
+        </Style>
     </Application.Resources>
 </Application>
